Fixed extra width occuring on mobile devices

--- a/default/css/sky.css
+++ b/default/css/sky.css
@@ -302,6 +302,8 @@ body {
   }
 }
 
+
+
 @media (max-width: 600px) {
   .menu-container {
     width: 380px;
@@ -336,7 +338,7 @@ body {
 
   #header {
     width: auto;
-    min-width: 380px;
+    min-width: 0px;
   }
 
   .menuButton {
@@ -402,3 +404,15 @@ body {
   }
 }
 
+
+@media (max-width: 380px) {
+  .menu-container {
+    width: 0px;
+    padding-left: 300px;
+  }
+
+  #menu {
+    width: 240px;
+    left: 59%;
+  }
+}
